# thunder-ase

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  setup.py
Docs/: fireball_intro.md
examples/1_Si_EOS/: Si_EOS.ipynb
examples/2_Si_DOS_bandstructure/: README.md  Si_single_point.ipynb
examples/3_C2H5OH_optimization/: C2H5OH_optimization.ipynb  clean.sh
examples/4_Ag_cluster_MD/: Ag_cluster_MD.ipynb  clean.sh
examples/4_Ga2O3_MD/: Ga2O3_cluster_MD.ipynb  clean.sh
examples/4_Ga2O3_cluster_MD/: Ga2O3_cluster_MD.ipynb  Ga2O3_monoclinic.cif  clean.sh
examples/5_Benzene_orbital_analysis/: Benzene_orbital.ipynb
examples/6_Benzene_DFT-D3/: Benzene_DFT-D3.ipynb  clean.sh
examples/6_Benzene_DFT-D4/: Benzene_DFT-D4.ipynb  clean.sh
examples/Ag_cluster_MD/: Ag.xyz  Ag_cluster_MD.ipynb
examples/Benzene_orbital_analysis/: Benzene_orbital.ipynb  clean.sh
examples/Si_DOS_bandstructure/: Si_single_point.ipynb
examples/Si_EOS/: README.md  Si_EOS.ipynb  clean.sh
examples/Si_single-point/: README.md  Si_single_point.ipynb  clean.sh
examples/socket_C2H5OH_optimization/: socket.ipynb
examples/socket_run/: clean.sh  socket.ipynb
fireball_calculator/: fireball.py
tests/: Fukui_IRC_MD.py  IRC_md.py  Si_EOS.py  clean.sh  md-nve.traj  md_from_TS.py  test_Si_lightning.py  test_dyn_run.py  test_dyn_run.traj  test_fit_gaussian.py  test_graphene_kpts.py  test_main_calculator.py  write_input.py
tests/C60/: 001.eigen  001.inp  001.json  001.xyz  C60_MD_socket_test.py  WARNINGS  md.traj  structures.inp  structures.options  structures.output
tests/C60_MD/: MD.py
tests/read_write_inp/: read_write_inp.ipynb  read_write_inp.py
tests/test_kpoints_reduced/: DOSCAR  EIGENVAL  IBZKPT  INCAR  KPOINTS  OUTCAR  PCDAT  POSCAR  XDATCAR  get_ir_kpoints.py  get_kpts.py  vasprun.xml
tests/test_mwfn/: write_mwfn.py
tests/test_utils_fit_basis_set/: test_fit_basis_set.py
thunder_ase/: fireball.py  optimize.py
thunder_ase/utils/: ANO_DK3_GBS.py  __init__.py  basis_set.py  mwfn.py  shell_dict.py
utils/: fit_basis_set.py  shell_dict.py  shell_primary_number.py
