[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thunder-ase"
version = "0.2.2"
authors = [
  { name="PJ Ren", email="openrpj@gmail.com" },
]
description = "ASE calculator interface for FIREBALL code"
readme = "README.md"
long_description = "README.md"
long_description_content_type = 'text/markdown'
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thunder-dft/thunder-ase"
"Bug Tracker" = "https://github.com/thunder-dft/thunder-ase/issues"